--- a/jazzmin/templates/admin/import_export/export.html
+++ b/jazzmin/templates/admin/import_export/export.html
@@ -28,10 +28,10 @@
                                 <div class="form-group field-name">
                                     <div class="row">
                                     {{ field.errors }}
-                                        <div class="col-sm-2 text-left">
+                                        <div class="col-sm-2 text-start">
                                             {{ field.label_tag }}
                                         </div>
-                                        <div class="col-sm-10 text-left">
+                                        <div class="col-sm-10 text-start">
                                             {{ field }}
                                         </div>
 
