--- a/jazzmin/templates/admin_doc/model_index.html
+++ b/jazzmin/templates/admin_doc/model_index.html
@@ -32,7 +32,7 @@
     <div class="col-7 col-sm-9">
         <div class="tab-content" id="tabs-tabContent">
             {% for group in grouped_models %}
-                <div class="tab-pane text-left fade{% if forloop.first %} show active{% endif %}" id="tabs-{{ group.grouper.label }}" role="tabpanel" aria-labelledby="tabs-{{ group.grouper.label }}-control">
+                <div class="tab-pane text-start fade{% if forloop.first %} show active{% endif %}" id="tabs-{{ group.grouper.label }}" role="tabpanel" aria-labelledby="tabs-{{ group.grouper.label }}-control">
 
                     <ul>
                         {% for model in group.list %}
