--- a/jazzmin/templates/admin_doc/template_filter_index.html
+++ b/jazzmin/templates/admin_doc/template_filter_index.html
@@ -30,7 +30,7 @@
     <div class="col-7 col-sm-9">
       <div class="tab-content">
         {% for library in filter_libraries %}
-        <div class="tab-pane text-left fade{% if forloop.first %} show active{% endif %}" id="tabs-{% firstof library.grouper built_in_filters %}" role="tabpanel" aria-labelledby="tabs-{% firstof library.grouper built_in_filters %}-tab">
+        <div class="tab-pane text-start fade{% if forloop.first %} show active{% endif %}" id="tabs-{% firstof library.grouper built_in_filters %}" role="tabpanel" aria-labelledby="tabs-{% firstof library.grouper built_in_filters %}-tab">
           {% for view in ns_views.list|dictsort:"url" %}
               {% ifchanged %}
               <h4><a href="{% url 'django-admindocs-views-detail' view=view.full_name %}">{{ view.url }}</a></h4>
