--- a/jazzmin/templates/admin_doc/template_tag_index.html
+++ b/jazzmin/templates/admin_doc/template_tag_index.html
@@ -30,7 +30,7 @@
     <div class="col-7 col-sm-9">
       <div class="tab-content" id="tabs-tabContent">
         {% for library in tag_libraries %}
-        <div class="tab-pane text-left fade{% if forloop.first %} show active{% endif %}" id="tabs-{% firstof library.grouper built_in_tags %}" role="tabpanel" aria-labelledby="tabs-{% firstof library.grouper built_in_tags %}-tab">
+        <div class="tab-pane text-start fade{% if forloop.first %} show active{% endif %}" id="tabs-{% firstof library.grouper built_in_tags %}" role="tabpanel" aria-labelledby="tabs-{% firstof library.grouper built_in_tags %}-tab">
           {% if library.grouper %}<p class="small quiet">{% blocktrans with code="{"|add:"% load "|add:library.grouper|add:" %"|add:"}" %}To use these tags, put <code>{{ code }}</code> in your template before using the tag.{% endblocktrans %}</p><hr>{% endif %}
           {% for tag in library.list|dictsort:"name" %}
             <h3 id="{{ library.grouper|default:"built_in" }}-{{ tag.name }}">{{ tag.name }}</h3>
