--- a/jazzmin/templates/admin_doc/view_index.html
+++ b/jazzmin/templates/admin_doc/view_index.html
@@ -38,7 +38,7 @@
     <div class="col-7 col-sm-9">
         <div class="tab-content" id="tabs-tabContent">
             {% for ns_views in views_by_ns %}
-                <div class="tab-pane text-left fade{% if forloop.first %} show active{% endif %}" id="tabs-{{ ns_views.grouper }}" role="tabpanel" aria-labelledby="tabs-{{ ns_views.grouper }}-control">
+                <div class="tab-pane text-start fade{% if forloop.first %} show active{% endif %}" id="tabs-{{ ns_views.grouper }}" role="tabpanel" aria-labelledby="tabs-{{ ns_views.grouper }}-control">
 
                     {% for view in ns_views.list|dictsort:"url" %}
                         <div class="card card-primary">
