--- a/jazzmin/templates/jazzmin/includes/ui_builder_panel.html
+++ b/jazzmin/templates/jazzmin/includes/ui_builder_panel.html
@@ -49,28 +49,28 @@
         <hr />
 
         <p class="mb-1">Small Text</p>
-        <div class="mb-1"><input type="checkbox" value="1" class="mr-1" id="body-small-text"><label for="body-small-text">Body</label></div>
-        <div class="mb-1"><input type="checkbox" value="1" class="mr-1" id="navbar-small-text"><label for="navbar-small-text">NavBar</label></div>
-        <div class="mb-1"><input type="checkbox" value="1" class="mr-1" id="sidebar-nav-small-text"><label for="sidebar-nav-small-text">SideBar</label></div>
-        <div class="mb-1"><input type="checkbox" value="1" class="mr-1" id="footer-small-text"><label for="footer-small-text">Footer</label></div>
-        <div class="mb-4"><input type="checkbox" value="1" class="mr-1" id="brand-small-text"><label for="brand-small-text">Brand</label></div>
+        <div class="mb-1"><input type="checkbox" value="1" class="me-1" id="body-small-text"><label for="body-small-text">Body</label></div>
+        <div class="mb-1"><input type="checkbox" value="1" class="me-1" id="navbar-small-text"><label for="navbar-small-text">NavBar</label></div>
+        <div class="mb-1"><input type="checkbox" value="1" class="me-1" id="sidebar-nav-small-text"><label for="sidebar-nav-small-text">SideBar</label></div>
+        <div class="mb-1"><input type="checkbox" value="1" class="me-1" id="footer-small-text"><label for="footer-small-text">Footer</label></div>
+        <div class="mb-4"><input type="checkbox" value="1" class="me-1" id="brand-small-text"><label for="brand-small-text">Brand</label></div>
 
         <p class="mb-1">SideBar Tweaks</p>
-        <div class="mb-1"><input type="checkbox" value="1" class="mr-1" id="sidebar-nav-flat-style"><label for="sidebar-nav-flat-style" title="Use a flat style sidebar">Flat style</label></div>
-        <div class="mb-1"><input type="checkbox" value="1" class="mr-1" id="sidebar-nav-legacy-style"><label for="sidebar-nav-legacy-style">Legacy style</label></div>
-        <div class="mb-1"><input type="checkbox" value="1" class="mr-1" id="sidebar-nav-compact"><label for="sidebar-nav-compact">Compact</label></div>
-        <div class="mb-1"><input type="checkbox" value="1" class="mr-1" id="sidebar-nav-child-indent"><label for="sidebar-nav-child-indent">Child indent</label></div>
-        <div class="mb-1"><input type="checkbox" value="1" class="mr-1" id="main-sidebar-disable-hover-focus-auto-expand"><label for="main-sidebar-disable-hover-focus-auto-expand">Disable auto-expand</label></div>
-        <div class="mb-1"><input type="checkbox" value="1" class="mr-1" id="sidebar-fixed"><label for="sidebar-fixed">Fixed SideBar</label></div>
+        <div class="mb-1"><input type="checkbox" value="1" class="me-1" id="sidebar-nav-flat-style"><label for="sidebar-nav-flat-style" title="Use a flat style sidebar">Flat style</label></div>
+        <div class="mb-1"><input type="checkbox" value="1" class="me-1" id="sidebar-nav-legacy-style"><label for="sidebar-nav-legacy-style">Legacy style</label></div>
+        <div class="mb-1"><input type="checkbox" value="1" class="me-1" id="sidebar-nav-compact"><label for="sidebar-nav-compact">Compact</label></div>
+        <div class="mb-1"><input type="checkbox" value="1" class="me-1" id="sidebar-nav-child-indent"><label for="sidebar-nav-child-indent">Child indent</label></div>
+        <div class="mb-1"><input type="checkbox" value="1" class="me-1" id="main-sidebar-disable-hover-focus-auto-expand"><label for="main-sidebar-disable-hover-focus-auto-expand">Disable auto-expand</label></div>
+        <div class="mb-1"><input type="checkbox" value="1" class="me-1" id="sidebar-fixed"><label for="sidebar-fixed">Fixed SideBar</label></div>
 
         <p class="mb-1">Misc</p>
-        <div class="mb-1"><input type="checkbox" value="1" class="mr-1" id="layout-boxed"><label for="layout-boxed">Boxed Layout</label></div>
-        <div class="mb-1"><input type="checkbox" value="1" class="mr-1" id="footer-fixed"><label for="footer-fixed">Fixed Footer</label></div>
-        <div class="mb-1"><input type="checkbox" value="1" class="mr-1" id="actions-fixed"><label for="actions-fixed">Sticky Actions <br />(Change form)</label></div>
+        <div class="mb-1"><input type="checkbox" value="1" class="me-1" id="layout-boxed"><label for="layout-boxed">Boxed Layout</label></div>
+        <div class="mb-1"><input type="checkbox" value="1" class="me-1" id="footer-fixed"><label for="footer-fixed">Fixed Footer</label></div>
+        <div class="mb-1"><input type="checkbox" value="1" class="me-1" id="actions-fixed"><label for="actions-fixed">Sticky Actions <br />(Change form)</label></div>
 
         <p class="mb-1">Navbar Tweaks</p>
-        <div class="mb-1"><input type="checkbox" value="1" class="mr-1" id="no-navbar-border"><label for="no-navbar-border">No navbar border</label></div>
-        <div class="mb-1"><input type="checkbox" value="1" class="mr-1" id="navbar-fixed"><label for="navbar-fixed">Fixed NavBar</label></div>
+        <div class="mb-1"><input type="checkbox" value="1" class="me-1" id="no-navbar-border"><label for="no-navbar-border">No navbar border</label></div>
+        <div class="mb-1"><input type="checkbox" value="1" class="me-1" id="navbar-fixed"><label for="navbar-fixed">Fixed NavBar</label></div>
 
         <p class="mb-1">Button tweaks</p>
 
