--- a/jazzmin/templates/registration/base.html
+++ b/jazzmin/templates/registration/base.html
@@ -77,7 +77,7 @@
 <!-- jQuery -->
 <script src="{% static "admin/js/vendor/jquery/jquery.js" %}"></script>
 <!-- Bootstrap 5 -->
-<script src="{% static 'vendor/bootstrap/js/bootstrap.min.js' %}"></script>
+<script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 <!-- AdminLTE App -->
 <script src="{% static 'vendor/adminlte/js/adminlte.min.js' %}"></script>
 
