--- a/jazzmin/templates/admin/index.html
+++ b/jazzmin/templates/admin/index.html
@@ -24,7 +24,7 @@
         <div class="row">
             <div class="col-md-6 col-sm-12">
                 {% for app in dashboard_list %}
-                    <div class="card">
+                    <div class="card mb-3">
                         <div class="card-header">
                             <h5 class="m-0">{{ app.name }}</h5>
                         </div>
