--- a/jazzmin/templates/admin/change_form.html
+++ b/jazzmin/templates/admin/change_form.html
@@ -93,7 +93,7 @@
                             {% block object-tools %}
                                 {% if change %}
                                     {% if not is_popup %}
-                                        <div class="object-tools">
+                                        <div class="object-tools d-flex flex-wrap gap-2">
                                             {% block object-tools-items %}
                                                 {% change_form_object_tools %}
                                                 {% block extra_actions %}{% endblock %}
