--- a/jazzmin/templates/admin/change_list_results.html
+++ b/jazzmin/templates/admin/change_list_results.html
@@ -8,7 +8,7 @@
 
 {% if results %}
     <div class="card">
-        <div class="card-body table-responsive p-0">
+        <div class="card-body table-responsive">
             <table id="result_list" class="table table-striped">
                 <thead>
                     <tr>
