cleaning up, and styling fixes

--- a/jazzmin/static/jazzmin/css/main.css
+++ b/jazzmin/static/jazzmin/css/main.css
@@ -501,6 +501,22 @@ html[data-bs-theme="dark"] .selector select option:checked {
 
 
 /* ============================================================================
+   CHANGELIST - Checkbox select-all column
+   ========================================================================== */
+.djn-checkbox-select-all {
+    width: 1.5em;
+    text-align: center;
+    padding-right: 0 !important;
+}
+
+.table td.action-checkbox {
+    width: 1.5em;
+    text-align: center;
+    padding-right: 0 !important;
+}
+
+
+/* ============================================================================
    USER PANEL - Sidebar user info (not a native AdminLTE v4 component)
    ========================================================================== */
 .user-panel {
